feat: added more tags
- python
- enum

--- a/src/profi/templates/scripts/clairvoyance.yaml
+++ b/src/profi/templates/scripts/clairvoyance.yaml
@@ -1,6 +1,6 @@
 metadata:
   filename: "clairvoyance.yaml"
-  tags: ["api"]
+  tags: ["api", "enum"]
   created: "2025-03-29"
   author: "@anakles"
   
