--- a/src/profi/templates/scripts/gospider.yaml
+++ b/src/profi/templates/scripts/gospider.yaml
@@ -1,6 +1,6 @@
 metadata:
   filename: "gospider.yaml"
-  tags: ["web", "api"]
+  tags: ["web", "api", "enum"]
   created: "2025-03-29"
   author: "Unknown"
 
