--- a/src/profi/templates/scripts/xcat-detect-post.yaml
+++ b/src/profi/templates/scripts/xcat-detect-post.yaml
@@ -1,6 +1,6 @@
 metadata:
   filename: "xcat-detect-post.yaml"
-  tags: ["web", "api"]
+  tags: ["web", "api", "enum"]
   created: "2025-03-29"
   author: "@anakles"
 
