--- a/src/profi/templates/scripts/hydra-spray-login-rdp.yaml
+++ b/src/profi/templates/scripts/hydra-spray-login-rdp.yaml
@@ -1,6 +1,6 @@
 ---
 metadata:
-  filename: "hydra-spray-rdp.yaml"
+  filename: "hydra-spray-login-rdp.yaml"
   tags: ["system"]
   created: "2025-03-29"
   author: "Unknown"
