feat: Addition of wordlists

--- a/src/profi/templates/scripts/generate-wordlist-numbers.yaml
+++ b/src/profi/templates/scripts/generate-wordlist-numbers.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "generate-wordlist-numbers.yaml"
-  tags: []
+  tags: ["wordlist"]
   created: "2025-03-29"
   author: "Unknown"
 
