feat: added some tags to templates
* added "wordlist" tag to some templates
* introduced new "utils" tag for utility scripts
* added default color for "utils" to base config

--- a/src/profi/templates/scripts/namemash-py.yaml
+++ b/src/profi/templates/scripts/namemash-py.yaml
@@ -1,7 +1,9 @@
 ---
 metadata:
   filename: "namemash-py.yaml"
-  tags: ["python"]
+  tags: [
+    "python",
+    "wordlist"]
   created: "2025-03-29"
   author: "@anakles"
 
