--- a/src/profi/templates/scripts/postman-collection-to-note-md.yaml
+++ b/src/profi/templates/scripts/postman-collection-to-note-md.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "postman-collection-to-note-md.yaml"
-  tags: []
+  tags: ["utils"]
   created: "2025-03-29"
   author: "Unknown"
 
