--- a/src/profi/templates/scripts/nmap-services-to-note-org.yaml
+++ b/src/profi/templates/scripts/nmap-services-to-note-org.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "nmap-services-to-note-org.yaml"
-  tags: []
+  tags: ["utils"]
   created: "2025-03-29"
   author: "Unknown"
 
