fix: Documented new tags and cleared up readme

--- a/src/profi/templates/scripts/hydra-dictionary-ssh.yaml
+++ b/src/profi/templates/scripts/hydra-dictionary-ssh.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "hydra-dictionary-ssh.yaml"
-  tags: ["systed"]
+  tags: ["system"]
   created: "2025-03-29"
   author: "Unknown"
 
