--- a/src/profi/templates/scripts/create-fake-certificate.yaml
+++ b/src/profi/templates/scripts/create-fake-certificate.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "create-fake-certificate.yaml"
-  tags: []
+  tags: ["utils"]
   created: "2025-03-29"
   author: "Unknown"
 
