--- a/src/profi/templates/scripts/nodejs-command-injection.yaml
+++ b/src/profi/templates/scripts/nodejs-command-injection.yaml
@@ -13,4 +13,4 @@ content: |
   echo '                       -----Linux------                         '; \
   echo 'Observe the callback below:                                     '; \
   echo '================================================================'; \
-  python -m <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+  python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
