--- a/src/profi/templates/scripts/capture-http-ssrf-out-of-band-responses-including-headers.yaml
+++ b/src/profi/templates/scripts/capture-http-ssrf-out-of-band-responses-including-headers.yaml
@@ -9,4 +9,4 @@ content: |
   mkdir -p packstation/outbound; \
   echo 'Possible payload to enter: http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/non-existent-path'; \
   echo '================================================================'; \
-  python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound --show-headers
+  python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound --show-headers <%=$(esh variables/delivery_dir_listing)%>
