--- a/src/profi/templates/scripts/deliver-windows-vshadow-ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-vshadow-ps1.yaml
@@ -18,4 +18,4 @@ content: |
   echo '================================================================'; \
   echo '                         -----CMD-----                          '; \
   echo '================================================================'; \
-   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound <%=$(esh variables/delivery_dir_listing)%>
