--- a/src/profi/templates/scripts/nmap-initial-udp-top1000.yaml
+++ b/src/profi/templates/scripts/nmap-initial-udp-top1000.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  mkdir -p nmap; sudo nmap -v -sU -sCV -Pn -oA nmap/initial-udp-top1000 -T4 --traceroute -O --max-retries 3 <ip>; sudo chown -R $(whoami):$(whoami) nmap
+  mkdir -p nmap; sudo nmap -v -sU -sCV -Pn -oA nmap/initial-udp-top1000 -T4 --traceroute -O --max-retries 3 $IP; sudo chown -R $(whoami):$(whoami) nmap
