--- a/src/profi/templates/scripts/nmap-initial-tcp-full.yaml
+++ b/src/profi/templates/scripts/nmap-initial-tcp-full.yaml
@@ -6,4 +6,4 @@ metadata:
   author: "Unknown"
 
 content: |
-  mkdir -p nmap; sudo nmap -v -sCV -Pn -oA nmap/initial-tcp-full -p- -T4 --traceroute -O --max-retries 3 <ip>; sudo chown -R $(whoami):$(whoami) nmap
+  mkdir -p nmap; sudo nmap -v -sCV -Pn -oA nmap/initial-tcp-full -p- -T4 --traceroute -O --max-retries 3 $IP; sudo chown -R $(whoami):$(whoami) nmap
