--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,7 +21,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"sharphound\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"sharphound\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "SpecterOps/SharpHound",
@@ -33,7 +33,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"mimikatz\".*?version=\\s+\"(?<currentValue>[^\"]+)\""
+        "name=\"mimikatz\",\\s+version=\"(?<currentValue>[^\"]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "gentilkiwi/mimikatz",
@@ -45,7 +45,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"pspy\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"pspy\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "DominicBreuker/pspy",
@@ -57,8 +57,8 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"linpeas\".*?version=\\s+\"(?<currentValue>[^\"]+)\"",
-        "name=\\s+\"winpeas\".*?version=\\s+\"(?<currentValue>[^\"]+)\""
+        "name=\"linpeas\",\\s+version=\"(?<currentValue>[^\"]+)\"",
+        "name=\"winpeas\",\\s+version=\"(?<currentValue>[^\"]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "peass-ng/PEASS-ng",
@@ -70,7 +70,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"chisel\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"chisel\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "jpillora/chisel",
@@ -82,7 +82,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"ligolo-ng\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"ligolo-ng\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "nicocha30/ligolo-ng",
@@ -94,7 +94,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"wintun\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"wintun\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "custom.wintun",
       "depNameTemplate": "wintun",
@@ -107,7 +107,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"printspoofer\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"printspoofer\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "itm4n/PrintSpoofer",
@@ -119,7 +119,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"godpotato\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"godpotato\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "BeichenDream/GodPotato",
@@ -131,7 +131,7 @@
         "install.py"
       ],
       "matchStrings": [
-        "name=\\s+\"pingcastle\".*?version=\\s+\"(?<currentValue>[\\d\\.]+)\""
+        "name=\"pingcastle\",\\s+version=\"(?<currentValue>[\\d\\.]+)\""
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "netwrix/pingcastle",
