ci: Removed renovate assignees

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,10 +9,7 @@
     "custom.regex"
   ],
   "assignees": [
-    "pluggero",
-    "anakles",
-    "benzammour",
-    "Cserny"
+    "pluggero"
   ],
   "customManagers": [
     {
