fix: Fixed dep version format

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -132,7 +132,7 @@
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "netwrix/pingcastle",
-      "versioningTemplate": "semver"
+      "versioningTemplate": "ruby"
     }
   ],
   "customDatasources": {
