--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -96,7 +96,7 @@
       "datasourceTemplate": "custom.wintun",
       "depNameTemplate": "wintun",
       "versioningTemplate": "semver",
-      "extractVersionTemplate": "/wintun/tag/\\?h=(?<version>[\\d.]+)\\'"
+      "extractVersionTemplate": "/wintun/tag/\\?h=(?<version>[\\d.]+)"
     },
     {
       "customType": "regex",
