--- a/src/profi/templates/scripts/generate-all-ipv4-bash.yaml
+++ b/src/profi/templates/scripts/generate-all-ipv4-bash.yaml
@@ -1,13 +1,13 @@
 ---
 metadata:
-  filename: "generate-all-ipv4-fish.yaml"
+  filename: "generate-all-ipv4-bash.yaml"
   tags: ["utils"]
   created: "2025-07-16"
   author: "@Anakles"
 
 content: |
-  for a in (seq 1 255)
-    for b in (seq 1 255)
+  for a in {1..255};do
+    for b in {1..255};do
         echo "192.168.$a.$b" >> ips.txt
-    end
-  end
+    done
+  done
