feat: Addition of renovate assignees

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -22,7 +22,10 @@
     "custom.regex"
   ],
   "assignees": [
-    "pluggero"
+    "pluggero",
+    "anakles",
+    "benzammour",
+    "Cserny"
   ],
   "customManagers": [
     {
